<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BTD</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Update">Update Traffic density</string>
    <string name="Options">Shoot!</string>
    <string name="Getupdate">Get Updates!</string>
    <string name="Low">Low</string>
    <string name="medium">Moderate</string>
    <string name="high">High</string>
    <string name="Start">Start</string>
    <string name="Get">Get!</string>
    <string name="back">Go Back!</string>

</resources>